<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_marginBottom="13dp"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@color/colorRed"
        android:textSize="35sp"
        android:textStyle="bold|italic"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/boutondegrader"
        android:text="@string/book"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/boutondegrader"
        android:text="@string/profil"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:onClick="ProfileActivity"/>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recherche"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="250dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />



    <EditText
        android:id="@+id/editTextDebut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/boutongris"
        android:inputType="date"
        android:hint="@string/debut_reservation"
        android:textAllCaps="false"
        android:textColor="@color/colorGreyDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="300dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <EditText
        android:id="@+id/editTextFin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/boutongris"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/fin_réservation"
        android:textAllCaps="false"
        android:textColor="@color/colorGreyDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="370dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/boutondegrader"
        android:text="@string/rechercher"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:layout_marginTop="400dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:onClick="ProfileActivity"/>


</android.support.constraint.ConstraintLayout>