<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/renseigner"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/boutongris"
        android:hint="@string/nom"
        android:inputType="text"
        android:textAllCaps="false"
        android:textColor="@color/colorGreyDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="180dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <EditText
        android:id="@+id/editTextFin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/boutongris"
        android:inputType="text"
        android:hint="@string/prenom"
        android:textAllCaps="false"
        android:textColor="@color/colorGreyDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="260dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <EditText

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/boutongris"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/date"
        android:textAllCaps="false"
        android:textColor="@color/colorGreyDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="325dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/boutondegrader"
        android:text="@string/valid"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="450dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:onClick="MainActivity"/>



</android.support.constraint.ConstraintLayout>