<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservationActivity">

    <TextView

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/merci"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="162dp"
        android:background="@drawable/boutongris"
        android:inputType="text"
        android:textAllCaps="false"
        android:textColor="@color/colorGreyDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:text="@string/message"
        android:textAllCaps="false"
        android:textColor="@color/colorGreyDark"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />
    />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/prixfinal"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="400dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/boutondegrader"
        android:text="@string/valid"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="500dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />



</android.support.constraint.ConstraintLayout>